docker/config/envoy.yaml
static_resources:
  listeners:
  - name: forward_proxy_listener
    address:
      socket_address:
        address: "::"
        port_value: 8484
        ipv4_compat: true
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: forward_proxy
          codec_type: AUTO
          route_config:
            name: forward_proxy_route
            virtual_hosts:
            - name: forward_proxy_virtual_host
              domains: ["*"]
              routes:
              - match:
                  connect_matcher: {}
                route:
                  cluster: dynamic_forward_proxy_cluster
                  upgrade_configs:
                  - upgrade_type: CONNECT
                    connect_config: {}
              - match:
                  prefix: "/"
                route:
                  cluster: dynamic_forward_proxy_cluster
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: ALL
                max_hosts: 1024
                host_ttl: 300s
                dns_refresh_rate: 60s
                dns_failure_refresh_rate:
                  base_interval: 1s
                  max_interval: 10s
                typed_dns_resolver_config:
                  name: envoy.network.dns_resolver.cares
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                    resolvers:
                    - socket_address:
                        address: "1.1.1.1"
                        port_value: 53
                    - socket_address:
                        address: "1.0.0.1"
                        port_value: 53
                    dns_resolver_options:
                      use_tcp_for_dns_lookups: false
                      no_default_search_domain: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: dynamic_forward_proxy_cluster
    connect_timeout: 10s
    lb_policy: CLUSTER_PROVIDED
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        upstream_http_protocol_options:
          auto_sni: true
          auto_san_validation: true
        common_http_protocol_options:
          max_requests_per_connection: 1
        explicit_http_config:
          http_protocol_options: {}
    common_lb_config:
      healthy_panic_threshold:
        value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 2
        keepalive_time: 10
        keepalive_interval: 3
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: ALL
          max_hosts: 1024
          host_ttl: 300s
          dns_refresh_rate: 60s
          dns_failure_refresh_rate:
            base_interval: 1s
            max_interval: 10s
          typed_dns_resolver_config:
            name: envoy.network.dns_resolver.cares
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
              resolvers:
              - socket_address:
                  address: "1.1.1.1"
                  port_value: 53
              - socket_address:
                  address: "1.0.0.1"
                  port_value: 53
              dns_resolver_options:
                use_tcp_for_dns_lookups: false
                no_default_search_domain: true

overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 50000

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
